--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,45 +57,54 @@
             color: white;
             margin-top: 40px;
         }
+
+        a {
+            color: #0d1b2a;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
 
 <header>
     <h1>Dawid Ceran Engineering</h1>
-    <p>Profesjonalne usługi inżynierskie i techniczne</p>
+    <p>Professional Engineering and Technical Services</p>
 </header>
 
 <div class="section">
-    <h2>O firmie</h2>
+    <h2>About Us</h2>
     <p>
-        Dawid Ceran Engineering specjalizuje się w świadczeniu usług inżynierskich, technologicznych 
-        oraz projektowych. Stawiamy na profesjonalizm, solidność i precyzję wykonania.
+        Dawid Ceran Engineering specializes in providing engineering, technical, and project services.
+        We focus on professionalism, reliability, and precision in execution.
     </p>
 </div>
 
 <div class="section">
-    <h2>Usługi</h2>
+    <h2>Services</h2>
     <ul>
-        <li>Projektowanie i konsultacje inżynierskie</li>
-        <li>Nadzór techniczny</li>
-        <li>Analizy techniczne i optymalizacja procesów</li>
-        <li>Dokumentacja techniczna</li>
+        <li>Engineering design and consulting</li>
+        <li>Technical supervision</li>
+        <li>Technical analysis and process optimization</li>
+        <li>Technical documentation</li>
     </ul>
 </div>
 
 <div class="section">
-    <h2>Kontakt</h2>
+    <h2>Contact</h2>
     <div class="contact-box">
         <strong>Dawid Ceran</strong><br>
         Email: <a href="mailto:info@ceranengineering.pl">info@ceranengineering.pl</a><br>
-        Telefon: +48 000 000 000<br>
-        Lokalizacja: Polska
+        Phone: +353 8364667, +48 452300047<br>
+        Location: EMEA
     </div>
 </div>
 
 <div class="footer">
-    © 2025 Dawid Ceran Engineering – Wszystkie prawa zastrzeżone
+    © 2025 Dawid Ceran Engineering – All rights reserved
 </div>
 
 </body>
