--- a/index.html
+++ b/index.html
@@ -5,81 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dawid Ceran Engineering</title>
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #f5f5f5;
-            color: #333;
-        }
+        /* ===== Reset & Base ===== */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body { font-family: 'Arial', sans-serif; line-height: 1.6; background: #f4f6f8; color: #333; }
 
+        a { text-decoration: none; color: inherit; }
+
+        /* ===== Header ===== */
         header {
             background: #0d1b2a;
             color: white;
-            padding: 60px 20px;
             text-align: center;
+            padding: 60px 20px;
+            position: relative;
         }
-
+        header img {
+            max-width: 120px;
+            margin-bottom: 20px;
+        }
         header h1 {
             font-size: 42px;
-            margin: 0;
+            margin-bottom: 10px;
             letter-spacing: 1px;
         }
-
         header p {
             font-size: 18px;
-            margin-top: 10px;
-            opacity: 0.9;
+            opacity: 0.85;
         }
 
+        /* ===== Sections ===== */
         .section {
             max-width: 900px;
             margin: 40px auto;
-            padding: 20px;
             background: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+            border-radius: 12px;
+            padding: 30px 25px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
         }
-
         .section h2 {
-            margin-top: 0;
             color: #0d1b2a;
+            margin-bottom: 15px;
+        }
+        .section ul {
+            list-style-type: disc;
+            padding-left: 20px;
         }
 
+        /* ===== Contact ===== */
         .contact-box {
-            margin-top: 15px;
             line-height: 1.8;
         }
+        .contact-box a {
+            color: #0d1b2a;
+        }
+        .contact-box a:hover {
+            text-decoration: underline;
+        }
 
-        .footer {
-            text-align: center;
-            padding: 20px;
+        /* ===== Footer ===== */
+        footer {
             background: #0d1b2a;
             color: white;
+            text-align: center;
+            padding: 20px;
             margin-top: 40px;
         }
 
-        a {
-            color: #0d1b2a;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
+        /* ===== Responsive ===== */
+        @media (max-width: 600px) {
+            header h1 { font-size: 32px; }
+            header p { font-size: 16px; }
         }
     </style>
 </head>
 <body>
 
 <header>
+    <!-- Optional: add your logo here -->
+    <img src="https://via.placeholder.com/120x120.png?text=Logo" alt="Dawid Ceran Engineering Logo">
     <h1>Dawid Ceran Engineering</h1>
-    <p>Professional Engineering and Technical Services</p>
+    <p>Professional Engineering & Technical Services</p>
 </header>
 
 <div class="section">
     <h2>About Us</h2>
     <p>
-        Dawid Ceran Engineering specializes in providing engineering, technical, and project services.
-        We focus on professionalism, reliability, and precision in execution.
+        Dawid Ceran Engineering provides expert engineering, technical, and project services.
+        We are committed to professionalism, precision, and reliability in every project.
     </p>
 </div>
 
@@ -88,7 +100,7 @@
     <ul>
         <li>Engineering design and consulting</li>
         <li>Technical supervision</li>
-        <li>Technical analysis and process optimization</li>
+        <li>Process analysis and optimization</li>
         <li>Technical documentation</li>
     </ul>
 </div>
@@ -103,9 +115,9 @@
     </div>
 </div>
 
-<div class="footer">
+<footer>
     © 2025 Dawid Ceran Engineering – All rights reserved
-</div>
+</footer>
 
 </body>
 </html>
