--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <h2>Contact</h2>
     <div class="contact-box">
         <strong>Dawid Ceran</strong><br>
-        Email: <a href="mailto:info@ceranengineering.pl">info@ceranengineering.pl</a><br>
-        Phone: +353 8364667, +48 452300047<br>
+        Email: <a href="mailto:info@ceranengineering.pl">info@ceranengineering.ie</a><br>
+        Phone: +353 85 836 4667, +48 452 300 047<br>
         Location: EMEA
     </div>
 </div>
