--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dawid Ceran Engineering</title>
+    <title> DC Engineering</title>
     <style>
         /* ===== Reset & Base ===== */
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -111,12 +111,12 @@
         <strong>Dawid Ceran</strong><br>
         Email: <a href="mailto:info@ceranengineering.pl">info@ceranengineering.ie</a><br>
         Phone: +353 85 836 4667, +48 452 300 047<br>
-        Location: EMEA
+        Location: Ireland
     </div>
 </div>
 
 <footer>
-    © 2025 Dawid Ceran Engineering – All rights reserved
+    © 2025 DC Engineering – All rights reserved
 </footer>
 
 </body>
