--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DC Engineering</title>
+    <title>DC Engineering</title>
     <style>
         /* ===== Reset & Base ===== */
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -82,15 +82,15 @@
 
 <header>
     <!-- Optional: add your logo here -->
-    <img src="https://via.placeholder.com/120x120.png?text=Logo" alt="Dawid Ceran Engineering Logo">
-    <h1>Dawid Ceran Engineering</h1>
+    <img src="https://via.placeholder.com/120x120.png?text=Logo" alt="DC Engineering Logo">
+    <h1>DC Engineering</h1>
     <p>Professional Engineering & Technical Services</p>
 </header>
 
 <div class="section">
     <h2>About Us</h2>
     <p>
-        Dawid Ceran Engineering provides expert engineering, technical, and project services.
+        DC Engineering provides expert engineering, technical, and project services.
         We are committed to professionalism, precision, and reliability in every project.
     </p>
 </div>
@@ -108,10 +108,10 @@
 <div class="section">
     <h2>Contact</h2>
     <div class="contact-box">
-        <strong>Dawid Ceran</strong><br>
-        Email: <a href="mailto:info@ceranengineering.pl">info@ceranengineering.ie</a><br>
-        Phone: +353 85 836 4667, +48 452 300 047<br>
-        Location: Ireland
+        <strong>DC Engineering</strong><br>
+        Email: <a href="mailto:info@dcengineering.com">info@dcengineering.com</a><br>
+        Phone: +353 8364667, +48 452300047<br>
+        Location: EMEA
     </div>
 </div>
 
