--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h2>Contact</h2>
     <div class="contact-box">
         <strong>DC Engineering</strong><br>
-        Email: <a href="mailto:info@dcengineering.com">info@dcengineering.com</a><br>
+        Email: <a href="mailto:iengineering.com">ceranengineering@gmail.com</a><br>
         Phone: +353 8364667, +48 452300047<br>
         Location: EMEA
     </div>
