--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <div class="contact-box">
         <strong>DC Engineering</strong><br>
         Email: <a href="mailto:iengineering.com">ceranengineering@gmail.com</a><br>
-        Phone: +353 8364667, +48 452300047<br>
-        Location: EMEA
+        Phone: +353 85 836 4667, +48 452 300 047<br>
+        Location: Ireland
     </div>
 </div>
 
