--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
             color: white;
             text-align: center;
             padding: 60px 20px;
-            position: relative;
-        }
-        header img {
-            max-width: 120px;
-            margin-bottom: 20px;
         }
         header h1 {
             font-size: 42px;
@@ -81,8 +76,6 @@
 <body>
 
 <header>
-    <!-- Optional: add your logo here -->
-    <img src="https://via.placeholder.com/120x120.png?text=Logo" alt="DC Engineering Logo">
     <h1>DC Engineering</h1>
     <p>Professional Engineering & Technical Services</p>
 </header>
@@ -109,9 +102,9 @@
     <h2>Contact</h2>
     <div class="contact-box">
         <strong>DC Engineering</strong><br>
-        Email: <a href="mailto:iengineering.com">ceranengineering@gmail.com</a><br>
-        Phone: +353 85 836 4667, +48 452 300 047<br>
-        Location: Ireland
+        Email: <a href="mailto:ceranengineering@gmail.com">ceranengineering@gmail.com</a><br>
+        Phone: <a href="tel:+353858364667">+353 85 836 4667</a>, <a href="tel:+48452300047">+48 45 230 0047</a><br>
+        Location: EMEA
     </div>
 </div>
 
