--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 <div class="section">
     <h2>Contact</h2>
     <div class="contact-box">
-        <strong>DC Engineering</strong><br>
+        <strong>Dawid Ceran</strong><br>
         Email: <a href="mailto:ceranengineering@gmail.com">ceranengineering@gmail.com</a><br>
         Phone: <a href="tel:+353858364667">+353 85 836 4667</a>, <a href="tel:+48452300047">+48 45 230 0047</a><br>
-        Location: EMEA
+        Location: Ireland
     </div>
 </div>
 
